--- a/home/home.css
+++ b/home/home.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap');
 
-
 /* CSS Reset */
 html, body {
     margin: 0;
@@ -33,18 +32,18 @@ body {
     width: 15px;
     height: 15px;
     transform: translate(-50%, -50%);
-    background-color: rgba(255, 255, 255);
-    mix-blend-mode: difference;
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 50%;
     pointer-events: none;
+    z-index: 1000;
     transition: width .5s, height .5s;
-    z-index: 9999;
 }
 
 .inner-cursor.grow {
     width: 37.5px;
     height: 37.5px;
     transition: width .5s, height .5s;
+    background-color: rgba(255, 255, 255, 0.6);
 }
 
 .outer-cursor {
@@ -53,13 +52,10 @@ body {
     width: 37.5px;
     height: 37.5px;
     transform: translate(-50%, -50%);
-    border: inset 1px solid #fff;
-    mix-blend-mode: difference;
     border-radius: 50%;
     pointer-events: none;
-    z-index: 9999;
+    z-index: 1000;
 }
-
 
 .container {
     text-align: center;
